# arborist

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
arborist/: __init__.py  cli.py  manager.py  memory.py  store.py  synthesis.py  tree.py  utils.py
arborist/evaluators/: __init__.py  base.py  numeric.py
arborist/executors/: __init__.py  base.py  code_generator.py  full_script_generator.py  python.py  scaffold.py  script_template.py  shell.py
arborist/mutators/: __init__.py  code_gen_mutator.py  llm_mutator.py
arborist/scientist/: __init__.py  cli.py  hypothesis.py  journal.py  moves.py  observer.py  problem_spec.py  scientist.py
arborist/strategies/: __init__.py  base.py  best_first.py  breadth_first.py  hybrid.py  llm_guided.py  ucb.py
data/spaceship-titanic/: _baseline.py  submission.csv  submit.py
docs/: DESIGN.md
examples/: generic_scientist.py  sleep_accel_scientist.py  spaceship_scientist.py  xgboost_tuning.py
spaceship_journals/: 651cd97bd041.jsonl  824be13af08d.jsonl  88340cd55ea8.jsonl  8fbcc98fb212.jsonl  ad3bfb1bb51e.jsonl  report_651cd97bd041.json  report_824be13af08d.json  report_88340cd55ea8.json  report_8fbcc98fb212.json
tests/: test_arborist.py  test_code_generator.py  test_full_script_generator.py  test_hybrid_strategy.py  test_problem_spec.py  test_scientist.py  test_script_template.py
visualization/: capture.py  index.html  record.html  render.html
